syntax = "proto3";

option csharp_namespace = "IdentityService.Protos.Services";

service Authenticator {
	rpc Authenticate (AuthPayload) returns (AuthResult);
}

message AuthPayload {
	string token = 1;
}

message AuthResult {
	bool auth_pass = 1;
	bool can_refresh = 2;
	int64 uid = 3;
	string role = 4;
}